# wasmtime-example

./: .gitignore  Cargo.toml  build_guest.sh  guest.wat  recipes.json
guest/: Cargo.toml
guest/src/: lib.rs
guest/wit/: main.wit
src/: main.rs
